src/test/ui/consts/const_short_circuit.stderr
error: new features like let bindings are not permitted in constants which also use short circuiting operators
  --> $DIR/const_short_circuit.rs:4:9
   |
LL |     let mut x = true && false;
   |         ^^^^^
   |
note: use of `&&` operator here does not actually short circuit due to the const evaluator presently not being able to do control flow. See https://github.com/rust-lang/rust/issues/49146 for more information.
  --> $DIR/const_short_circuit.rs:4:22
   |
LL |     let mut x = true && false;
   |                      ^^

error: new features like let bindings are not permitted in constants which also use short circuiting operators
  --> $DIR/const_short_circuit.rs:9:9
   |
LL |     let x = true && false;
   |         ^
   |
note: use of `&&` operator here does not actually short circuit due to the const evaluator presently not being able to do control flow. See https://github.com/rust-lang/rust/issues/49146 for more information.
  --> $DIR/const_short_circuit.rs:9:18
   |
LL |     let x = true && false;
   |                  ^^

error: aborting due to 2 previous errors

